maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:4: error: not enough arguments for method update: (i: Int, x: Int)Unit.
Unspecified value parameter x.
  BiscuitCoord() = DetectBiscuit()
                 ^